avoid unnecessary objects